# waterwheel

./: .bazelrc  .dockerignore  .envrc  .gitattributes  .gitignore  BUILD.bazel  Cargo.toml  DESIGN.md  Dockerfile  Dockerfile.debug  Justfile  LICENSE  MODULE.bazel  README.md  ROADMAP.md  docker-compose.yml  flake.nix  log4rs-sample.yaml  rust-toolchain.toml  vector.toml
.github/workflows/: build.yml  docker-publish.yml  publish.yml  rust.yml  ui.yaml
docs/: auth.md  comparison-to-airflow.md  config.md  getting-started.md  internals.md  intro.md  job-schema.json  jobs.md
etc/: Justfile  README.md  docker-stack.yml  influxdb-k8s.yml  waterwheel-server.service  waterwheel-worker.service
etc/authn/: sealproxy.yml
etc/kube/: Justfile  README.md  amqp-deployment.yaml  amqp-service.yaml  amqp.yaml  db-deployment.yaml  db-service.yaml  db.yaml  dbdata-persistentvolumeclaim.yaml  influxdb.yaml  kustomization.yaml  ldap.yaml  opa-deployment.yaml  opa-policy-configmap.yaml  opa-service.yaml  opa.yaml  policy.rego  redis.yaml  sealproxy-config.yaml  sealproxy.yml  vector.toml  vector.yaml  ww-api-deployment.yaml  ww-api-tcp-service.yaml  ww-api.yaml  ww-namespace.yaml  ww-scheduler-deployment.yaml  ww-scheduler.yaml  ww-worker-deployment.yaml  ww-worker-role.yaml  ww-worker.yaml
etc/policy/: policy.rego
nix/: default.nix  module-server.nix  module-worker.nix  module.nix  nixos-test.nix  overlays.nix  password  shell.nix  waterwheel-ui.nix  waterwheel.nix
sample/: Justfile  complex-dag.yml  demo.yml  deploy.py  generate_jobs.py  invalid.yml  job1.yml  project.json  test_job.yml  testedit.json  testedit.yml  xjob.yml
sample/authn/: index.js  login.html  package-lock.json  package.json
sample/custom/: Dockerfile  main.py
sample/jobs/: catchup.json  complex-dag.yml  crash.json  demo.yml  depends_on_past.yml  invalid.yml  offset.json  retry.json  simple.json  slow.yml  testedit.json  testedit.yml  trigger_offset.yml  xjob.yml
sample/policy/: policy.rego
sample/random/: Dockerfile  main.py
src/: amqp.rs  circuit_breaker.rs  config.rs  counter.rs  db.rs  default_config.toml  execute.rs  heartbeat.rs  lib.rs  logging.rs  main.rs  messages.rs  metrics.rs  postoffice.rs  rendezvous.rs  schema.sql  server.rs  testing_data.sql  tokens.rs  trigger_time.rs  triggers.rs  util.rs  worker.rs
src/server/: api.rs  body_parser.rs  cluster.rs  execute.rs  heartbeat.rs  jwt.rs  progress.rs  requeue.rs  retries.rs  stash.rs  status.rs  tokens.rs  trigger_time.rs  triggers.rs  updates.rs
src/server/api/: auth.rs  authn.rs  config_cache.rs  heartbeat.rs  job.rs  jwt.rs  project.rs  request_ext.rs  schedulers.rs  session.rs  stash.rs  status.rs  task.rs  task_logs.rs  types.rs  updates.rs  util.rs  workers.rs
src/server/api/job/: duration.rs  graph.rs  reference.rs  task_runs.rs  tasks.rs  tokens.rs  triggers.rs
src/server/api/stash/: global.rs  job.rs  project.rs
src/worker/: config_cache.rs  docker.rs  engine.rs  env.rs  heartbeat.rs  kube.rs  kubejob.rs  work.rs
tests/: common.rs  test_api.rs  test_project.rs  test_project_jobs.rs  test_worker.rs
tests/common/: mod.rs  rabbitmq.rs
ui/: .babelrc  BUILD.bazel  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.js
ui/dependency_types/: react-graph-vis.d.ts
ui/src/: App.jsx  App.tsx  index.html  index.js  index.tsx
ui/src/components/: ActivateToken.jsx  ActivateToken.tsx  Body.jsx  Date.jsx  Date.tsx  Graph.jsx  Graph.tsx  Log.tsx  Navigation.tsx  Priority.tsx  State.jsx  State.tsx  TopMenu.jsx  TopMenu.tsx  WorkerStatus.jsx  WorkerStatus.tsx
ui/src/pages/: Home.jsx  Home.tsx  Job.jsx  Job.tsx  Login.jsx  Login.tsx  Project.jsx  Project.tsx  Projects.jsx  Projects.tsx  Schedulers.tsx  TaskLogs.tsx  TokenRuns.jsx  TokenRuns.tsx  Tokens.jsx  Tokens.tsx  Triggers.jsx  Triggers.tsx  Worker.jsx  Worker.tsx  Workers.jsx  Workers.tsx
ui/src/pages/Job/: Duration.jsx  Duration.tsx  Overview.jsx  TaskGrid.jsx  TaskGrid.tsx  TokenTable.jsx  TokenTable.tsx  Triggers.jsx  Triggers.tsx
ui/src/types/: Job.ts  Project.tsx  Scheduler.ts  Status.ts  Task.ts  Token.ts  Worker.ts  common.ts
