load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")
load("@crates//:defs.bzl", "all_crate_deps", "aliases")

rust_library(
    name = "libwaterwheel",
    crate_name = "waterwheel",
    srcs = glob(["src/**/*.rs"], exclude=["src/main.rs"]),
    compile_data = ["src/schema.sql", "src/default_config.toml", "//ui:ui"],
    aliases = aliases(),
    deps = all_crate_deps(normal = True),
    proc_macro_deps = all_crate_deps(proc_macro = True),
)

rust_binary(
    name = "waterwheel",
    srcs = ["src/main.rs"],
    aliases = aliases(),
    deps = [":libwaterwheel"] + all_crate_deps(normal = True),
)
