[package]
name = "waterwheel"
version = "0.1.0"
authors = ["Steve Lee <sphen.lee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
async-trait = "0.1.51"
binary-heap-plus = "0.4.0"
bollard = "0.11"
cadence = "0.26"
chrono = "0.4.15"
clap = "2.33.3"
colored = "2.0.0"
config = { version = "0.11.0", default-features = false, features = ["json", "toml", "yaml"]}
cron = "0.9"
dotenv = "0.15.0"
futures = "0.3.5"
git-version = "0.3.5"
highnoon = { version = "0.0.6" }
humantime = "2.0.1"
itertools = "0.10"
jsonwebtoken = "7.2.0"
json-patch = "0.2"
k8s-openapi = { version = "0.13", default-features = false, features = ["v1_20"] }
kube = "0.61"
kube-runtime = "0.61"
lapin = "1.2.1"
lru_time_cache = "0.11"
once_cell = "1.4.0"
postage = "0.4"
rand = "0.8.4"
reqwest = { version = "0.11.1", features = ["json", "serde_json"]}
serde = "1.0.115"
serde_json = "1.0.57"
serde_yaml = "0.8.13"
sqlx = { version = "0.5.10", features = ["postgres", "chrono", "uuid", "json", "runtime-tokio-rustls"] }
thiserror = "1.0.20"
tokio = { version = "1", features = [ "full", "rt-multi-thread" ] }
tokio-amqp = "1"
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = "0.2"
typemap = "0.3.3"
url = { version = "2", features = ["serde"] }
uuid = { version = "0.8.1", features = [ "v4", "serde" ] }
