[package]
name = "waterwheel"
version = "0.1.0"
authors = ["Steve Lee <sphen.lee@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
anymap = "1.0.0-beta.2"
async-trait = "0.1.56"
binary-heap-plus = "0.4.1"
bollard = "0.13.0"
cadence = "0.29.0"
chitchat = "0.4.1"
chrono = "0.4.19"
clap = "3.2.13"
colored = "2.0.0"
config = { version = "0.13.1", default-features = false, features = ["json", "toml", "yaml"] }
cron = "0.11.0"
dotenv = "0.15.0"
futures = "0.3.21"
gethostname = "0.2.3"
git-version = "0.3.5"
highnoon = "0.0.9"
humantime = "2.1.0"
itertools = "0.10.3"
jsonwebtoken = "8.1.1"
json-patch = "0.2.6"
k8s-openapi = { version = "0.15.0", default-features = false, features = ["v1_20"] }
kube = "0.74.0"
kube-runtime = "0.74.0"
lapin = "2.1.1"
lru_time_cache = "0.11.11"
mime = "0.3.16"
once_cell = "1.13.0"
postage = "0.5.0"
rand = "0.8.5"
redis = { version = "0.22.1", features = ["tokio-comp"] }
regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["json", "serde_json"] }
serde = "1.0.139"
serde_json = "1.0.82"
serde_yaml = "0.8.26"
sqlx = { version = "0.6.0", features = ["postgres", "chrono", "uuid", "json", "runtime-tokio-rustls"] }
thiserror = "1.0.31"
tokio = { version = "1.20.0", features = [ "full", "rt-multi-thread" ] }
tokio-amqp = "2.0.0"
tracing = "0.1.35"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.14", features = ["env-filter", "json"] }
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "1.1.2", features = [ "v4", "serde" ] }
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }

[dev-dependencies]
pretty_assertions = "1.2.1"
testcontainers = { git = "http://github.com/sphenlee/testcontainers-rs", branch = "feature/slee/upgrade-bollard" }
