[package]
name = "waterwheel"
version = "0.1.0"
authors = ["Steve Lee <sphen.lee@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
anymap3 = "1.0.0"
async-trait = "0.1.83"
binary-heap-plus = "0.5.0"
bollard = "0.17.1"
cadence = "1.5.0"
chitchat = "0.7.0"
chrono = "0.4.38"
clap = "4.5.19"
colored = "2.1.0"
config = { version = "0.14.0", default-features = false, features = ["json", "toml", "yaml"] }
cron = "0.12.1"
dotenv = "0.15.0"
futures = "0.3"
gethostname = "0.5.0"
git-version = "0.3.9"
highnoon = "0.0.9"
humantime = "2.1.0"
itertools = "0.13.0"
jsonwebtoken = "9.3.0"
json-patch = "2.0.0"
k8s-openapi = { version = "0.23.0", default-features = false, features = ["v1_31"] }
kube = "0.95.0"
kube-runtime = "0.95.0"
lapin = "2.5.0"
lru_time_cache = "0.11.11"
mime = "0.3.17"
once_cell = "1.20"
postage = "0.5.0"
rand = "0.8.5"
redis = { version = "0.27", features = ["tokio-comp"] }
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde = "1.0.210"
serde_json = "1.0.128"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.2", features = ["postgres", "chrono", "uuid", "json", "runtime-tokio-rustls"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = [ "full", "rt-multi-thread" ] }
tokio-amqp = "2.0.0"
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
url = { version = "2.5.2", features = ["serde"] }
uuid = { version = "1.10.0", features = [ "v4", "serde" ] }
xxhash-rust = { version = "0.8.12", features = ["xxh3"] }

[dev-dependencies]
testcontainers-modules = { version = "0.11.2", features = ["rabbitmq", "postgres", "redis"] }
pretty_assertions = "1.4.1"
