# __________________________________________________________
# Rust setup

bazel_dep(name = "rules_rust", version = "0.57.1")

git_override(module_name = "rules_rust",
    commit = "d256c7bb4668bbdfd1e25971531c874c23f4646a",
    remote = "https://github.com/bazelbuild/rules_rust")

RUST_EDITION = "2021"
RUST_VERSION = "nightly/2024-10-02"

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = RUST_EDITION,
    versions = [RUST_VERSION],
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crate, "crates")

# __________________________________________________________
# Typescript/Webpack setup


bazel_dep(name = "aspect_rules_js", version = "2.1.3")
bazel_dep(name = "rules_nodejs", version = "6.3.3")
bazel_dep(name = "aspect_rules_webpack", version = "0.16.0")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "22.13.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//ui:pnpm-lock.yaml",
    npm_package_lock = "//ui:package-lock.json",
    #verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
use_repo(pnpm, "pnpm")

